--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".application.PredictionHistoryApplication"
@@ -16,7 +18,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Asclepius"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".view.ArticlesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.HistoryDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".view.PredictionHistoryActivity"
             android:exported="false" />
@@ -25,7 +33,7 @@
             android:exported="false" />
         <activity
             android:name=".view.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
